Feature: Markdown editing support